Remove overflow-x: hidden from css (fixes #63)

--- a/css/elements.css
+++ b/css/elements.css
@@ -1,6 +1,3 @@
-html {
-}
-
 body {
     font-size: 18px;
     line-height: 1.5;
@@ -8,7 +5,6 @@ body {
     padding: 0;
     color: #333;
     margin: 0 2% 0 31%;
-    overflow-x: hidden;
 }
 
 body.oldtoc {
